Updating my projects portfolio

--- a/index.html
+++ b/index.html
@@ -43,31 +43,31 @@
         <h2>My Skills</h2>
         <div class="skills">
             <div class="skill-item">
-                <div class="image"><img src="/Portfolio/images/HTML.png" alt="HTML"></div>
+                <div class="image"><img src="images/HTML.png" alt="HTML"></div>
                 <div id="progress-bar"></div>
             </div>
             <div class="skill-item">
-                <div class="image"><img src="/Portfolio/images/css_logo.png" alt="CSS"></div>
+                <div class="image"><img src="images/css_logo.png" alt="CSS"></div>
                 <div id="progress-bar"></div>
             </div>
             <div class="skill-item">
-                <div class="image"><img src="/Portfolio/images/Javascript.png" alt="Javascript"></div>
+                <div class="image"><img src="images/Javascript.png" alt="Javascript"></div>
                 <div id="progress-bar"></div>
             </div>
             <div class="skill-item">
-                <div class="image"><img src="/Portfolio/images/tensorflow_logo.png" alt="Tensorflow"></div>
+                <div class="image"><img src="images/tensorflow_logo.png" alt="Tensorflow"></div>
                 <div id="progress-bar"></div>
             </div>
             <div class="skill-item">
-                <div class="image"><img src="/Portfolio/images/python_logo.png" alt="Python"></div>
+                <div class="image"><img src="images/python_logo.png" alt="Python"></div>
                 <div id="progress-bar"></div>
             </div>
             <div class="skill-item">
-                <div class="image"><img src="/Portfolio/images/c_sharp_logo.png" alt="C# Language"></div>
+                <div class="image"><img src="images/c_sharp_logo.png" alt="C# Language"></div>
                 <div id="progress-bar"></div>
             </div>
             <div class="skill-item">
-                <div class="image"><img src="/Portfolio/images/java_logo.png" alt="Java"></div>
+                <div class="image"><img src="images/java_logo.png" alt="Java"></div>
                 <div id="progress-bar"></div>
             </div>
             <div class="skill-item">
@@ -113,13 +113,13 @@
         <div class="item">
             <a href="https://my-entertainment-place.blogspot.com/" target="_blank">
                 <!--img src="https://i.imgur.com/s8nxmwK.jpg" alt="My Entertainment Place"-->
-                <img src="/Portfolio/images/My_Entertainment_place_blog.jpg" alt="My Entertainment Place"> 
+                <img src="images/My_Entertainment_place_blog.jpg" alt="My Entertainment Place"> 
             </a>
             <div class="description">My Entertainment Place</div>
             <div class="md">
                 <div class="md-content">
                     <div class="md-img">
-                        <img id="details-img" src="/Portfolio/images/My_Entertainment_place_blog.jpg" alt="My Entertainment Place">
+                        <img id="details-img" src="images/My_Entertainment_place_blog.jpg" alt="My Entertainment Place">
                     </div>
                     <div class="md-details">
                         <h1>Descripción del proyecto</h1>
@@ -132,17 +132,17 @@
         </div>
         <div class="item">
             <a href="https://luism96xd.github.io/sign-in-sign-out/" target="_blank">
-                <img src="/Portfolio/images/Log_in_form.jpg" alt="Log In Form"> 
+                <img src="images/Log_in_form.jpg" alt="Log In Form"> 
             </a>
             <div class="description">Log in Form</div>
             <div class="md">
                 <div class="md-content">
                     <div class="md-img">
-                        <img id="details-img" src="/Portfolio/images/Log_in_form.jpg" alt="Iniciar Sesión y Registrarse">
+                        <img id="details-img" src="images/Log_in_form.jpg" alt="Iniciar Sesión y Registrarse">
                     </div>
                     <div class="md-details">
                         <h1>Descripción del proyecto</h1>
-                        <p>Este proyecto consiste en un formulario de inicio de sesión. Si el usuario no tiene una cuenta, podrá ir a otro formulario de registro. Se ha utilizado HTML y CSS</p>
+                        <p>Este proyecto consiste en un formulario de inicio de sesión. <br> Si el usuario no tiene una cuenta, podrá ir a otro formulario de registro. Se ha utilizado HTML y CSS</p>
                         <button id="md-close">X</button>
                         <a href="https://luism96xd.github.io/sign-in-sign-out/" target="_blank">Go to the project site</a>
                     </div>
@@ -157,7 +157,7 @@
             <div class="md">
                 <div class="md-content">
                     <div class="md-img">
-                        <img id="details-img" src="/img.png" alt="Netflix Clone">
+                        <img id="details-img" src="img.png" alt="Netflix Clone">
                     </div>
                     <div class="md-details">
                         <h1>Descripción del proyecto</h1>
@@ -169,13 +169,13 @@
         </div>
         <div class="item">
             <a href="https://my-entertainment-place.blogspot.com/" target="_blank">
-                <img src="/img.png" alt="Netflix"> 
+                <img src="img.png" alt="Netflix"> 
             </a>
             <div class="description">Descripción</div>
             <div class="md">
                 <div class="md-content">
                     <div class="md-img">
-                        <img id="details-img" src="/img.png" alt="Netflix Clone">
+                        <img id="details-img" src="img.png" alt="Netflix Clone">
                     </div>
                     <div class="md-details">
                         <h1>Descripción del proyecto</h1>
@@ -187,13 +187,13 @@
         </div>
         <div class="item">
             <a href="https://my-entertainment-place.blogspot.com/" target="_blank">
-                <img src="/img.png" alt="Netflix"> 
+                <img src="img.png" alt="Netflix"> 
             </a>
             <div class="description">Descripción</div>
             <div class="md">
                 <div class="md-content">
                     <div class="md-img">
-                        <img id="details-img" src="/img.png" alt="Netflix Clone">
+                        <img id="details-img" src="img.png" alt="Netflix Clone">
                     </div>
                     <div class="md-details">
                         <h1>Descripción del proyecto</h1>
