Updating portfolio version 2

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <p>Do you want to see my projects?</p>
             <button class="btn">Take a look</button>
         </main>
-        <img class="featured-img" src="svg-1.svg" alt="Bulding Websites">
+        <img class="featured-img" src="images/svg-1.svg " alt="Bulding Websites">
     </section>
     <a name="about"></a>
     <section id="skills">
