Adding vanilla-tilt script

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
         <div id="output"></div>
     </section>
     <script src="script.js"></script>
-    <script type="text/javascript" src="/vanilla-tilt.js"></script>
+    <script type="text/javascript" src="vanilla-tilt.js"></script>
     <script type="text/javascript">
         VanillaTilt.init(document.querySelectorAll(".skill-item"), {
             max: 25,
