--- a/index.html
+++ b/index.html
@@ -32,37 +32,37 @@
     <a name="about"></a>
     <section class="about">
         <div>
-            <img class="photo" src="/images/Me.jpg" alt="Luis Mario's Photo">
+            <img class="photo" src="images/Me.jpg" alt="Luis Mario's Photo">
             <h2>Luis Rivas</h2>
         </div>
         
         <div class="skills">
             <div class="skill-item">
-                <div class="image"><img src="/images/HTML.png" alt="HTML"></div>
+                <div class="image"><img src="images/HTML.png" alt="HTML"></div>
                 <div id="progress-bar"></div>
             </div>
             <div class="skill-item">
-                <div class="image"><img src="/images/css_logo.png" alt="CSS"></div>
+                <div class="image"><img src="images/css_logo.png" alt="CSS"></div>
                 <div id="progress-bar"></div>
             </div>
             <div class="skill-item">
-                <div class="image"><img src="/images/Javascript.png" alt="Javascript"></div>
+                <div class="image"><img src="images/Javascript.png" alt="Javascript"></div>
                 <div id="progress-bar"></div>
             </div>
             <div class="skill-item">
-                <div class="image"><img src="/images/tensorflow_logo.png" alt="Tensorflow"></div>
+                <div class="image"><img src="images/tensorflow_logo.png" alt="Tensorflow"></div>
                 <div id="progress-bar"></div>
             </div>
             <div class="skill-item">
-                <div class="image"><img src="/images/python_logo.png" alt="Python"></div>
+                <div class="image"><img src="images/python_logo.png" alt="Python"></div>
                 <div id="progress-bar"></div>
             </div>
             <div class="skill-item">
-                <div class="image"><img src="/images/c_sharp_logo.png" alt="C# Language"></div>
+                <div class="image"><img src="images/c_sharp_logo.png" alt="C# Language"></div>
                 <div id="progress-bar"></div>
             </div>
             <div class="skill-item">
-                <div class="image"><img src="/images/java_logo.png" alt="Java"></div>
+                <div class="image"><img src="images/java_logo.png" alt="Java"></div>
                 <div id="progress-bar"></div>
             </div>
             <div class="skill-item">
@@ -76,12 +76,12 @@
     <a name="projects"></a>
     <section class="projects">
         <div class="item" data-modal-id="modal1">
-            <img src="/images/netflix.png" alt="Netflix" data-modal-id="modal1">  
+            <img src="images/netflix.png" alt="Netflix" data-modal-id="modal1">  
             <div class="description">Netflix Clone</div>
             <div class="modal-wrapper" id="modal1">
                 <div class="modal-window">
                     <div class="md-img">
-                        <img id="details-img" src="/images/netflix.png" alt="Netflix Clone">
+                        <img id="details-img" src="images/netflix.png" alt="Netflix Clone">
                     </div>
                     <div class="md-details">
                         <h1>Descripción del proyecto</h1>
@@ -94,12 +94,12 @@
         </div>
 
         <div class="item" data-modal-id="modal2">
-            <img src="/images/My_Entertainment_place_blog.jpg" alt="My Entertainment Place" data-modal-id="modal2"> 
+            <img src="images/My_Entertainment_place_blog.jpg" alt="My Entertainment Place" data-modal-id="modal2"> 
             <div class="description">My Entertainment Place</div>
             <div class="modal-wrapper" id="modal2">
                 <div class="modal-window">
                     <div class="md-img">
-                        <img id="details-img" src="/images/My_Entertainment_place_blog.jpg" alt="My Entertainment Place">
+                        <img id="details-img" src="images/My_Entertainment_place_blog.jpg" alt="My Entertainment Place">
                     </div>
                     <div class="md-details">
                         <h1>Descripción del proyecto</h1>
@@ -111,12 +111,12 @@
             </div>
         </div>
         <div class="item" data-modal-id="modal3">
-            <img src="/images/Log_in_form.jpg" alt="Log In Form" data-modal-id="modal3"> 
+            <img src="images/Log_in_form.jpg" alt="Log In Form" data-modal-id="modal3"> 
             <div class="description">Log in Form</div>
             <div class="modal-wrapper" id="modal3">
                 <div class="modal-window">
                     <div class="md-img">
-                        <img id="details-img" src="/images/Log_in_form.jpg" alt="Iniciar Sesión y Registrarse">
+                        <img id="details-img" src="images/Log_in_form.jpg" alt="Iniciar Sesión y Registrarse">
                     </div>
                     <div class="md-details">
                         <h1>Descripción del proyecto</h1>
@@ -128,12 +128,12 @@
             </div>
         </div>
         <div class="item" data-modal-id="modal4">
-            <img src="/images/javascript-fullstack-app.png" alt="Javascript FullStack" data-modal-id="modal4"> 
+            <img src="images/javascript-fullstack-app.png" alt="Javascript FullStack" data-modal-id="modal4"> 
             <div class="description">Javascript Fullstack App</div>
             <div class="modal-wrapper" id="modal4">
                 <div class="modal-window">
                     <div class="md-img">
-                        <img id="details-img" src="/images/javascript-fullstack-app.png" alt="Javascript FullStack App">
+                        <img id="details-img" src="images/javascript-fullstack-app.png" alt="Javascript FullStack App">
                     </div>
                     <div class="md-details">
                         <h1>Descripción del proyecto</h1>
@@ -145,12 +145,12 @@
             </div>
         </div>
         <div class="item" data-modal-id="modal5">
-            <img src="/images/NotesApp_chatbot.png" alt="Notes App + Chatbot" data-modal-id="modal5"> 
+            <img src="images/NotesApp_chatbot.png" alt="Notes App + Chatbot" data-modal-id="modal5"> 
             <div class="description">Notes App + Chatbot</div>
             <div class="modal-wrapper" id="modal5">
                 <div class="modal-window">
                     <div class="md-img">
-                        <img id="details-img" src="/images/NotesApp_chatbot.png" alt="Notes App + GPT-3 Chatbot">
+                        <img id="details-img" src="images/NotesApp_chatbot.png" alt="Notes App + GPT-3 Chatbot">
                     </div>
                     <div class="md-details">
                         <h1>Descripción del proyecto</h1>
@@ -162,13 +162,13 @@
             </div>
         </div>
         <div class="item" data-modal-id="modal6">
-            <img src="/images/Regression-tensorflowjs.png" alt="Linear Regression Tensorflow.JS" data-modal-id="modal6">
+            <img src="images/Regression-tensorflowjs.png" alt="Linear Regression Tensorflow.JS" data-modal-id="modal6">
             <div class="description">Linear Regression Tensorflow.JS</div>
             <div class="modal-wrapper" id="modal6">
                 <div class="modal-window">
                     <button class="md-close">&times;</button>
                     <div class="md-img">
-                        <img id="details-img" src="/images/Regression-tensorflowjs.png" alt="Linear Regression Tensorflow JS">
+                        <img id="details-img" src="images/Regression-tensorflowjs.png" alt="Linear Regression Tensorflow JS">
                     </div>
                     <div class="md-details">
                         <h1>Descripción del proyecto</h1>
