--- a/index.html
+++ b/index.html
@@ -183,13 +183,13 @@
         <a name="contact"></a>
         <section class="contact-box">
             <h2>Contáctame</h2>
-            <form action="enviar.php" method="post" class="contact-form">
+            <form action="https://formspree.io/chromxd0@gmail.com" method="post" class="contact-form">
                 <label for="">Nombre:</label>
                 <input name="name" class="input" type="text" id="name" placeholder="Your Name" required>
                 <label for="">Email:</label>
-                <input name="email" class="input" type="email" id="email" placeholder="Your Email" required>
+                <input name="_replyto" class="input" type="email" id="email" placeholder="Your Email" required>
                 <label for="message">Escribe tu mensaje:</label>
-                <input name="message" type="text" placeholder="Escriba su mensaje" id="message" required>
+                <input name="body" type="text" placeholder="Escriba su mensaje" id="message" required>
                 <button type="submit">Enviar</button>
             </form>
         </section>
