--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
         <a name="contact"></a>
         <section class="contact-box">
             <h2>Contáctame</h2>
-            <form action="https://formspree.io/chromxd0@gmail.com" method="post" class="contact-form">
+            <form action="https://formspree.io/f/xbjqkzzg" method="post" class="contact-form">
                 <label for="">Nombre:</label>
                 <input name="name" class="input" type="text" id="name" placeholder="Your Name" required>
                 <label for="">Email:</label>
